# src/routes.ts
@@ -58,42 +58,42 @@ export const routes: RouteConfig[] = [
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/create",
+    path: "/user/journal/create",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/edit",
+    path: "/user/journal/edit",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/entries",
+    path: "/user/journal/journals",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/delete",
+    path: "/user/journal/delete",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/category/create",
+    path: "/user/journal/category/create",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/category/create-many",
+    path: "/user/journal/category/create-many",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/category/edit",
+    path: "/user/journal/category/edit",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
   {
-    path: "/user/entry/category/delete",
+    path: "/user/journal/category/delete",
     requiresAccessKey: false,
     requiresAuthorization: true,
   },
